--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "fetus-l4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/bnfcompile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "node src/bnfcompile.js"
   },
   "author": "AHaliq",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bnf": "^1.0.1",
+    "chalk": "^4.1.2"
+  }
 }
